--- a/src/app/search-friend/search-friend.component.html
+++ b/src/app/search-friend/search-friend.component.html
@@ -8,10 +8,10 @@
                         <h2 class="text-center">Search for Friend</h2>
                         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                             <label for="" class="form-label">Name</label>
-                            <input type="text" class="form-control">
+                            <input name="name" [(ngModel)]="name" type="text" class="form-control">
                         </div>
                         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                            <button class="btn btn-success mt-3">Search</button>
+                            <button (click)="readValue()" class="btn btn-success mt-3">Search</button>
                         </div>
                       
                     </div>
