--- a/src/app/add-friend/add-friend.component.html
+++ b/src/app/add-friend/add-friend.component.html
@@ -15,15 +15,15 @@
                             <input name="friendName" [(ngModel)]="friendName" type="text" class="form-control">
                         </div>
                         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                            <label for="" class="form-label">Friend Name</label>
+                            <label for="" class="form-label">Friend Nickname</label>
                             <input name="friendNickName" [(ngModel)]="friendNickName" type="text" class="form-control">
                         </div>
                         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                             <label for="" class="form-label">Description</label>
-                            <input name="DescribeYourFriend" [(ngModel)]="DescribeYourFriend"type="text" class="form-control">
+                            <input name="DescribeYourFriend" [(ngModel)]="DescribeYourFriend" type="text" class="form-control">
                         </div>
                         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                            <button class="btn btn-primary mt-3">submit</button>
+                            <button (click)="readValues()"  class="btn btn-primary mt-3">submit</button>
                         </div>
                       
                     </div>
